@startuml
skinparam linetype ortho
skinparam packageStyle rectangle

entity "users" as user {
  * id : UUID <<PK>>
  --
  email : VARCHAR(255) <<Unique>>
  password_hash : VARCHAR(255)
  created_at : TIMESTAMP
}

entity "wallets" as wallet {
  * id : UUID <<PK>>
  --
  * user_id : UUID <<FK>>
  name : VARCHAR(255)
  balance : DECIMAL(12,2)
  type : VARCHAR(50)
}

entity "transactions" as transaction {
  * id : UUID <<PK>>
  --
  * wallet_id : UUID <<FK>>
  * user_id : UUID <<FK>>
  title : VARCHAR(255)
  amount : DECIMAL(12,2)
  type : VARCHAR(50)
  category : VARCHAR(50)
  date : TIMESTAMP
}

user ||--o{ wallet : "posee"
user ||--o{ transaction : "registra"
wallet ||--o{ transaction : "contiene"

@enduml